--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "3eI6DUic-6jo"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "LkaimNJfYZ2w"
       },
@@ -94,13 +94,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "tFxztZQInlAB"
+        "id": "tFxztZQInlAB",
+        "outputId": "895af796-15c8-4d8d-e01a-e36c83bf98b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`integer` is a 1-d Tensor: tensor([1234])\n",
+            "`decimal` is a 0-d Tensor: 3.1415927410125732\n"
+          ]
+        }
+      ],
       "source": [
-        "integer = torch.tensor(1234)\n",
+        "# integer = torch.tensor(1234)\n",
+        "integer = torch.tensor([1234])\n",
         "decimal = torch.tensor(3.14159265359)\n",
         "\n",
         "print(f\"`integer` is a {integer.ndim}-d Tensor: {integer}\")\n",
@@ -118,11 +132,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "oaHXABe8oPcO"
+        "id": "oaHXABe8oPcO",
+        "outputId": "f5a2c5be-7716-4d4f-c353-30b7eb902494",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`fibonacci` is a 1-d Tensor with shape: torch.Size([6])\n",
+            "`count_to_100` is a 1-d Tensor with shape: torch.Size([100])\n"
+          ]
+        }
+      ],
       "source": [
         "fibonacci = torch.tensor([1, 1, 2, 3, 5, 8])\n",
         "count_to_100 = torch.tensor(range(100))\n",
@@ -142,16 +169,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "tFeBBe1IouS3"
+        "id": "tFeBBe1IouS3",
+        "outputId": "5b4989e3-f352-4940-d20e-9a9bc49012d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "images is a 4-d Tensor with shape: torch.Size([10, 3, 256, 256])\n"
+          ]
+        }
+      ],
       "source": [
         "### Defining higher-order Tensors ###\n",
         "\n",
         "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = torch.tensor(np.array([i * np.array(range(10)) for i in range(5)]))\n",
         "\n",
         "assert isinstance(matrix, torch.Tensor), \"matrix must be a torch Tensor object\"\n",
         "assert matrix.ndim == 2\n",
@@ -159,7 +198,7 @@
         "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use torch.zeros to initialize a 4-d Tensor of zeros with size 10 x 3 x 256 x 256.\n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
-        "images = # TODO\n",
+        "images = torch.zeros(10, 3, 256, 256)\n",
         "\n",
         "assert isinstance(images, torch.Tensor), \"images must be a torch Tensor object\"\n",
         "assert images.ndim == 4, \"images must have 4 dimensions\"\n",
@@ -178,11 +217,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "FhaufyObuLEG"
+        "id": "FhaufyObuLEG",
+        "outputId": "18a1c0a3-270a-435b-a2a4-91c9a93889ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "`row_vector`: tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+            "`column_vector`: tensor([0, 1, 2, 3, 4])\n",
+            "`scalar`: 0\n"
+          ]
+        }
+      ],
       "source": [
         "row_vector = matrix[1]\n",
         "column_vector = matrix[:, 1]\n",
@@ -208,15 +261,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "outputId": "c05baf57-615c-4791-f6a0-909b884fc29f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "c1: 76\n",
+            "c2: 76\n"
+          ]
+        }
+      ],
       "source": [
         "# Create the nodes in the graph and initialize values\n",
-        "a = torch.tensor(15)\n",
-        "b = torch.tensor(61)\n",
+        "a = torch.tensor(50)\n",
+        "b = torch.tensor(26)\n",
         "\n",
         "# Add them!\n",
         "c1 = torch.add(a, b)\n",
@@ -244,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "PJnfzpWyYZ23",
         "scrolled": true
@@ -256,9 +322,9 @@
         "# Construct a simple computation function\n",
         "def func(a, b):\n",
         "    '''TODO: Define the operation for c, d, e.'''\n",
-        "    c = # TODO\n",
-        "    d = # TODO\n",
-        "    e = # TODO\n",
+        "    c = a + b\n",
+        "    d = b - 1\n",
+        "    e = c * d\n",
         "    return e\n"
       ]
     },
@@ -273,11 +339,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "outputId": "cc00cd4b-3d14-48ff-e815-c8fba328487e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "e_out: 6.0\n"
+          ]
+        }
+      ],
       "source": [
         "# Consider example values for a,b\n",
         "a, b = 1.5, 2.5\n",
@@ -315,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "HutbJk-1kHPh"
       },
@@ -337,10 +415,10 @@
         "\n",
         "    def forward(self, x):\n",
         "        '''TODO: define the operation for z (hint: use torch.matmul).'''\n",
-        "        z = # TODO\n",
+        "        z = torch.matmul(x, self.W) + self.bias\n",
         "\n",
         "        '''TODO: define the operation for out (hint: use torch.sigmoid).'''\n",
-        "        y = # TODO\n",
+        "        y = torch.sigmoid(z)\n",
         "        return y\n"
       ]
     },
@@ -355,11 +433,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "2yxjCPa69hV_"
+        "id": "2yxjCPa69hV_",
+        "outputId": "b73567ea-356e-481f-a43f-7363290e72aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input shape: torch.Size([1, 2])\n",
+            "output shape: torch.Size([1, 3])\n",
+            "output result: tensor([[0.9576, 0.3048, 0.9475]], grad_fn=<SigmoidBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Define a layer and test the output!\n",
         "num_inputs = 2\n",
@@ -386,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "7WXTpmoL6TDz"
       },
@@ -401,7 +493,10 @@
         "# Define the model\n",
         "'''TODO: Use the Sequential API to define a neural network with a\n",
         "    single linear (dense!) layer, followed by non-linearity to compute z'''\n",
-        "model = nn.Sequential( ''' TODO ''' )\n"
+        "model = nn.Sequential(\n",
+        "    nn.Linear(n_input_nodes, n_output_nodes),\n",
+        "    nn.Sigmoid()\n",
+        ")\n"
       ]
     },
     {
@@ -415,11 +510,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "zKhp6XqCFFa0"
+        "id": "zKhp6XqCFFa0",
+        "outputId": "33a95a24-d901-4cdf-b2a6-8bd44c2a7033",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input shape: torch.Size([1, 2])\n",
+            "output shape: torch.Size([1, 3])\n",
+            "output result: tensor([[0.9576, 0.3048, 0.9475]], grad_fn=<SigmoidBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the model with example input\n",
         "x_input = torch.tensor([[1, 2.]])\n",
@@ -665,7 +774,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
         "WBk0ZDWY-ff8"
